cmake_minimum_required(VERSION 3.11 FATAL_ERROR)

set(PROJ_NAME Chip8Emu)

project(${PROJ_NAME} 
    LANGUAGES C CXX
    VERSION 1.0.0
)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(GNUInstallDirs)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})

set(SDL2_PROJECT_PATH  ${CMAKE_CURRENT_LIST_DIR}/external/SDL2)
add_subdirectory(${SDL2_PROJECT_PATH})

add_subdirectory(src)
